# World

./: .clang-format  .gitignore  CMakeLists.txt  compile_shaders.py  out.ppm
shader/: heightmap.comp.spv  heightmap.slang  triangle.frag.spv  triangle.slang  triangle.vert.spv
src/: camera.hpp  gfx.cpp  gfx.hpp  main.cpp  render.cpp  render.hpp  util.hpp
src/gfx/: noise.cpp  noise.hpp  stb_image.h  vma.cpp
